frb_example/pure_dart_multi/rust/extra_c_output_path_1/bridge_generated_shared.h

typedef struct _Dart_Handle* Dart_Handle;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef union SharedComplexEnumInAllBlocksKind {
  struct wire_SharedComplexEnumInAllBlocks_Empty *Empty;
  struct wire_SharedComplexEnumInAllBlocks_Primitives *Primitives;
  struct wire_SharedComplexEnumInAllBlocks_Nested *Nested;
  struct wire_SharedComplexEnumInAllBlocks_Optional *Optional;
  struct wire_SharedComplexEnumInAllBlocks_Buffer *Buffer;
  struct wire_SharedComplexEnumInAllBlocks_Enums *Enums;
  struct wire_SharedComplexEnumInAllBlocks_BytesArray *BytesArray;
} SharedComplexEnumInAllBlocksKind;
typedef struct wire_SharedComplexEnumInAllBlocks {
  int32_t tag;
  union SharedComplexEnumInAllBlocksKind *kind;
} wire_SharedComplexEnumInAllBlocks;
typedef struct wire_CrossSharedStructInBlock1And2 {
  struct wire_uint_8_list *name;
} wire_CrossSharedStructInBlock1And2;
typedef struct wire_CrossSharedStructInBlock2And3 {
  struct wire_uint_8_list *name;
} wire_CrossSharedStructInBlock2And3;
typedef struct wire_list_shared_complex_enum_in_all_blocks {
  struct wire_SharedComplexEnumInAllBlocks *ptr;
  int32_t len;
} wire_list_shared_complex_enum_in_all_blocks;
typedef struct wire_SharedStructInAllBlocks {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
  struct wire_list_shared_complex_enum_in_all_blocks *enum_list;
} wire_SharedStructInAllBlocks;
typedef struct wire_SharedStructInBlock1And2 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock1And2;
typedef struct wire_SharedStructInBlock2And3 {
  int32_t id;
  double num;
  struct wire_uint_8_list *name;
} wire_SharedStructInBlock2And3;
typedef struct wire_SharedStructOnlyForSyncTest {
  struct wire_uint_8_list *name;
  double score;
} wire_SharedStructOnlyForSyncTest;
void store_dart_post_cobject(DartPostCObjectFnType ptr);
Dart_Handle get_dart_object(uintptr_t ptr);
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
void wire_print_weekday__method__SharedWeekdaysEnumInAllBlocks(int64_t port_, int32_t that);
void wire_test_enum_method__method__SharedComplexEnumInAllBlocks(int64_t port_,
                                                                 struct wire_SharedComplexEnumInAllBlocks *that,
                                                                 struct wire_uint_8_list *message);
void wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocks(int64_t port_,
                                                                  int32_t that,
                                                                  struct wire_uint_8_list *message);
void wire_test_method__method__CrossSharedStructInBlock1And2(int64_t port_,
                                                             struct wire_CrossSharedStructInBlock1And2 *that,
                                                             struct wire_uint_8_list *message);
void wire_test_method__method__CrossSharedStructInBlock2And3(int64_t port_,
                                                             struct wire_CrossSharedStructInBlock2And3 *that,
                                                             struct wire_uint_8_list *message);
void wire_test_method__method__SharedStructInAllBlocks(int64_t port_,
                                                       struct wire_SharedStructInAllBlocks *that,
                                                       struct wire_uint_8_list *message,
                                                       uint32_t num);
void wire_test_method__method__SharedStructInBlock1And2(int64_t port_,
                                                        struct wire_SharedStructInBlock1And2 *that,
                                                        struct wire_uint_8_list *message);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Primitives(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Nested(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Optional(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Buffer(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_Enums(void);
union SharedComplexEnumInAllBlocksKind *inflate_SharedComplexEnumInAllBlocks_BytesArray(void);