frb_example/pure_dart_multi/dart/lib/bridge_generated_shared.io.dart


  void api_fill_to_wire_shared_complex_enum_in_all_blocks(
      SharedComplexEnumInAllBlocks apiObj, wire_SharedComplexEnumInAllBlocks wireObj) {
    if (apiObj is SharedComplexEnumInAllBlocks_Empty) {
      wireObj.tag = 0;
      return;
    }
    if (apiObj is SharedComplexEnumInAllBlocks_Primitives) {
      var pre_int32 = api2wire_i32(apiObj.int32);
      var pre_float64 = api2wire_f64(apiObj.float64);
      var pre_boolean = api2wire_bool(apiObj.boolean);
      wireObj.tag = 1;
      wireObj.kind = inner.inflate_SharedComplexEnumInAllBlocks_Primitives();
      wireObj.kind.ref.Primitives.ref.int32 = pre_int32;
      wireObj.kind.ref.Primitives.ref.float64 = pre_float64;
      wireObj.kind.ref.Primitives.ref.boolean = pre_boolean;
      return;
    }
    if (apiObj is SharedComplexEnumInAllBlocks_Nested) {
      var pre_field0 = api2wire_box_shared_complex_enum_in_all_blocks(apiObj.field0);
      wireObj.tag = 2;
      wireObj.kind = inner.inflate_SharedComplexEnumInAllBlocks_Nested();
      wireObj.kind.ref.Nested.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is SharedComplexEnumInAllBlocks_Optional) {
      var pre_field0 = api2wire_opt_box_autoadd_i32(apiObj.field0);
      var pre_field1 = api2wire_opt_uint_8_list(apiObj.field1);
      wireObj.tag = 3;
      wireObj.kind = inner.inflate_SharedComplexEnumInAllBlocks_Optional();
      wireObj.kind.ref.Optional.ref.field0 = pre_field0;
      wireObj.kind.ref.Optional.ref.field1 = pre_field1;
      return;
    }
    if (apiObj is SharedComplexEnumInAllBlocks_Buffer) {
      var pre_field0 = api2wire_ZeroCopyBuffer_Float32List(apiObj.field0);
      wireObj.tag = 4;
      wireObj.kind = inner.inflate_SharedComplexEnumInAllBlocks_Buffer();
      wireObj.kind.ref.Buffer.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is SharedComplexEnumInAllBlocks_Enums) {
      var pre_field0 = api2wire_shared_weekdays_enum_in_all_blocks(apiObj.field0);
      wireObj.tag = 5;
      wireObj.kind = inner.inflate_SharedComplexEnumInAllBlocks_Enums();
      wireObj.kind.ref.Enums.ref.field0 = pre_field0;
      return;
    }
    if (apiObj is SharedComplexEnumInAllBlocks_BytesArray) {
      var pre_field0 = api2wire_u8_array_3(apiObj.field0);
      wireObj.tag = 6;
      wireObj.kind = inner.inflate_SharedComplexEnumInAllBlocks_BytesArray();
      wireObj.kind.ref.BytesArray.ref.field0 = pre_field0;
      return;
    }
  }

  void api_fill_to_wire_shared_struct_in_all_blocks(
      SharedStructInAllBlocks apiObj, wire_SharedStructInAllBlocks wireObj) {
    wireObj.id = api2wire_i32(apiObj.id);
    wireObj.num = api2wire_f64(apiObj.num);
    wireObj.name = api2wire_String(apiObj.name);
    wireObj.enum_list = api2wire_opt_list_shared_complex_enum_in_all_blocks(apiObj.enumList);
  }

  void api_fill_to_wire_shared_struct_in_block_1_and_2(
      SharedStructInBlock1And2 apiObj, wire_SharedStructInBlock1And2 wireObj) {
    wireObj.id = api2wire_i32(apiObj.id);
    wireObj.num = api2wire_f64(apiObj.num);
    wireObj.name = api2wire_String(apiObj.name);
  }

  void api_fill_to_wire_shared_struct_in_block_2_and_3(
      SharedStructInBlock2And3 apiObj, wire_SharedStructInBlock2And3 wireObj) {
    wireObj.id = api2wire_i32(apiObj.id);
    wireObj.num = api2wire_f64(apiObj.num);
    wireObj.name = api2wire_String(apiObj.name);
  }

  void api_fill_to_wire_shared_struct_only_for_sync_test(
      SharedStructOnlyForSyncTest apiObj, wire_SharedStructOnlyForSyncTest wireObj) {
    wireObj.name = api2wire_String(apiObj.name);
    wireObj.score = api2wire_f64(apiObj.score);
  }
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class BridgeGeneratedSharedWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BridgeGeneratedSharedWire(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BridgeGeneratedSharedWire.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>('store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr.asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr = _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>('get_dart_object');
  late final _get_dart_object = _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>('drop_dart_object');
  late final _drop_dart_object = _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr = _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>('new_dart_opaque');
  late final _new_dart_opaque = _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>('init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_print_weekday__method__SharedWeekdaysEnumInAllBlocks(
    int port_,
    int that,
  ) {
    return _wire_print_weekday__method__SharedWeekdaysEnumInAllBlocks(
      port_,
      that,
    );
  }

  late final _wire_print_weekday__method__SharedWeekdaysEnumInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32)>>(
          'wire_print_weekday__method__SharedWeekdaysEnumInAllBlocks');
  late final _wire_print_weekday__method__SharedWeekdaysEnumInAllBlocks =
      _wire_print_weekday__method__SharedWeekdaysEnumInAllBlocksPtr.asFunction<void Function(int, int)>();

  void wire_test_enum_method__method__SharedComplexEnumInAllBlocks(
    int port_,
    ffi.Pointer<wire_SharedComplexEnumInAllBlocks> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_enum_method__method__SharedComplexEnumInAllBlocks(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_enum_method__method__SharedComplexEnumInAllBlocksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedComplexEnumInAllBlocks>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_enum_method__method__SharedComplexEnumInAllBlocks');
  late final _wire_test_enum_method__method__SharedComplexEnumInAllBlocks =
      _wire_test_enum_method__method__SharedComplexEnumInAllBlocksPtr.asFunction<
          void Function(int, ffi.Pointer<wire_SharedComplexEnumInAllBlocks>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocks(
    int port_,
    int that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocks(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocksPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int32, ffi.Pointer<wire_uint_8_list>)>>(
          'wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocks');
  late final _wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocks =
      _wire_test_enum_method__method__SharedWeekdaysEnumInAllBlocksPtr
          .asFunction<void Function(int, int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__CrossSharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_CrossSharedStructInBlock1And2> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__CrossSharedStructInBlock1And2(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__CrossSharedStructInBlock1And2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_CrossSharedStructInBlock1And2>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__CrossSharedStructInBlock1And2');
  late final _wire_test_method__method__CrossSharedStructInBlock1And2 =
      _wire_test_method__method__CrossSharedStructInBlock1And2Ptr.asFunction<
          void Function(int, ffi.Pointer<wire_CrossSharedStructInBlock1And2>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__CrossSharedStructInBlock2And3(
    int port_,
    ffi.Pointer<wire_CrossSharedStructInBlock2And3> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__CrossSharedStructInBlock2And3(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__CrossSharedStructInBlock2And3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_CrossSharedStructInBlock2And3>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__CrossSharedStructInBlock2And3');
  late final _wire_test_method__method__CrossSharedStructInBlock2And3 =
      _wire_test_method__method__CrossSharedStructInBlock2And3Ptr.asFunction<
          void Function(int, ffi.Pointer<wire_CrossSharedStructInBlock2And3>, ffi.Pointer<wire_uint_8_list>)>();

  void wire_test_method__method__SharedStructInAllBlocks(
    int port_,
    ffi.Pointer<wire_SharedStructInAllBlocks> that,
    ffi.Pointer<wire_uint_8_list> message,
    int num,
  ) {
    return _wire_test_method__method__SharedStructInAllBlocks(
      port_,
      that,
      message,
      num,
    );
  }

  late final _wire_test_method__method__SharedStructInAllBlocksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint32)>>('wire_test_method__method__SharedStructInAllBlocks');
  late final _wire_test_method__method__SharedStructInAllBlocks = _wire_test_method__method__SharedStructInAllBlocksPtr
      .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInAllBlocks>, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_test_method__method__SharedStructInBlock1And2(
    int port_,
    ffi.Pointer<wire_SharedStructInBlock1And2> that,
    ffi.Pointer<wire_uint_8_list> message,
  ) {
    return _wire_test_method__method__SharedStructInBlock1And2(
      port_,
      that,
      message,
    );
  }

  late final _wire_test_method__method__SharedStructInBlock1And2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_SharedStructInBlock1And2>,
              ffi.Pointer<wire_uint_8_list>)>>('wire_test_method__method__SharedStructInBlock1And2');
  late final _wire_test_method__method__SharedStructInBlock1And2 =
      _wire_test_method__method__SharedStructInBlock1And2Ptr
          .asFunction<void Function(int, ffi.Pointer<wire_SharedStructInBlock1And2>, ffi.Pointer<wire_uint_8_list>)>();
